fixed the animation for RandomActionComponent